--- a/WebLucky_Serwer/Pages/Order/OrderDetails.razor
+++ b/WebLucky_Serwer/Pages/Order/OrderDetails.razor
@@ -1,6 +1,7 @@
 ﻿@page "/order/details/{Id:int}"
 @inject IOrderRepository _orderRepository
 @inject IJSRuntime _jsRuntime
+@attribute [Authorize(Roles = SD.Role_Admin)]
 
 @if (IsLoading)
 {
@@ -163,7 +164,7 @@ else
                             }
                             @if (Order.OrderHeader.Status == SD.Status_Confirmed || Order.OrderHeader.Status == SD.Status_Pending)
                             {
-                                <button class="btn btn-danger form-control my-1">Cancel Order</button>
+                                <button @onclick="CancelOrder" class="btn btn-danger form-control my-1">Cancel Order</button>
                             }
                         </div>
                     </div>
@@ -213,5 +214,17 @@ else
         var OrderHeaderDTO = await _orderRepository.UpdateHeader(Order.OrderHeader);
         Order.OrderHeader = OrderHeaderDTO;
         await _jsRuntime.ToastrSuccess("Order has been Shipped!");
+    }
+    private async Task CancelOrder()
+    {
+        Order.OrderHeader = await _orderRepository.CancelOrder(Order.OrderHeader.Id);
+        if (Order.OrderHeader.Status == SD.Status_Cancelled)
+        {
+            await _jsRuntime.ToastrSuccess("Order has been cancelled successfully");
+        }
+        if (Order.OrderHeader.Status == SD.Status_Refunded)
+        {
+            await _jsRuntime.ToastrSuccess("Order has been cancelled & refunded successfully");
+        }
     }
 }
