--- a/WebLucky_Serwer/Pages/Order/OrderList.razor
+++ b/WebLucky_Serwer/Pages/Order/OrderList.razor
@@ -1,6 +1,7 @@
 ﻿@page "/orderList"
 @inject IOrderRepository _orderRepository
 @inject NavigationManager _navigationManager
+@attribute [Authorize(Roles = SD.Role_Admin)]
 
 <div>
     <h4 class="card-title text-info">Order's List</h4>
